--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://s7.gifyu.com/images/yusuf-umar-10mb.gif');
+        background-image: url('https://www.img.in.th/images/fefc10239cc5de24708218d5447889f4.gif');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
