--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.picz.in.th/image/rVM2Qv" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://www.img.in.th/images/bf049ea866ce066277f944f1f56fc3fe.gif" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="ใส่ลิ้งค์รูป" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://www.img.in.th/images/8984630e5bff9619f955a10c1e46ab17.gif" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">ใส่ข้อความ</p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กิจกรรมรับทุนฟรี รับเลยที่นี่ @278shkhj
+</p>
           <div class="d-grid gap-2 col-10 mx-auto">
-            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">ปุ่มแชร์</button>
+            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">กดเลย</button>
           </div>
         </div>
       </div>
@@ -77,7 +78,7 @@ CODE 👇🏻
     }
     async function main() {
       await liff.init({
-        liffId: "1656969222-3n4KmQ5B"
+        liffId: "1656976270-lOrxanZm"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
