--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/fefc10239cc5de24708218d5447889f4.gif');
+        background-image: url('https://www.img.in.th/images/bf049ea866ce066277f944f1f56fc3fe.gif');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -53,7 +53,54 @@
   async function sendShare() { 
    const result = await liff.shareTargetPicker([
    
-CODE 👇🏻
+{
+  "type": "bubble",
+  "size": "giga",
+  "hero": {
+    "type": "image",
+    "url": "https://sv1.picz.in.th/images/2022/03/16/rvCDvb.jpg",
+    "size": "full",
+    "aspectRatio": "1:1",
+    "aspectMode": "cover",
+    "action": {
+      "type": "uri",
+      "uri": "http://linecorp.com/"
+    }
+  },
+  "footer": {
+    "type": "box",
+    "layout": "vertical",
+    "spacing": "sm",
+    "contents": [
+      {
+        "type": "button",
+        "style": "primary",
+        "height": "sm",
+        "action": {
+          "type": "uri",
+          "label": "แชร์",
+          "uri": "https://liff.line.me/1656976270-lOrxanZm"
+        },
+        "color": "#19ea47",
+        "margin": "sm"
+      },
+      {
+        "type": "button",
+        "height": "sm",
+        "action": {
+          "type": "uri",
+          "label": "รับเครดิตฟรี",
+          "uri": "https://linecorp.com"
+        },
+        "style": "primary",
+        "color": "#e829a8",
+        "margin": "sm"
+      }
+    ],
+    "flex": 0,
+    "borderColor": "#E67810"
+  }
+}
 
       }])
       if (result) {
