--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         "action": {
           "type": "uri",
           "label": "รับเครดิตฟรี",
-          "uri": "https://linecorp.com"
+          "uri": "https://liff.line.me/1656976270-lOrxanZm"
         },
         "style": "primary",
         "color": "#e829a8",
