--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
   <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js?s=224323"></script>
   <script>
     async function sendShare() {
-      const result = await liff.shareTargetPicker([
-{
+      const result = await liff.shareTargetPicker([{
   "type": "bubble",
   "size": "giga",
   "hero": {
@@ -98,7 +97,7 @@
     "borderColor": "#E67810"
   }
 }
-      ])
+      }])
       if (result) {
       alert(`[${result.status}] แชร์สำเร็จ`)
         liff.closeWindow()
