--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js?s=224323"></script>
   <script>
     async function sendShare() {
-      const result = await liff.shareTargetPicker([{
+      const result = await liff.shareTargetPicker([
   "type": "bubble",
   "size": "giga",
   "hero": {
