--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MYBet.C4 - @564izmzq</title>
+  <title>PGLUCKY789 - @511cihjd</title>
   <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="game mobile">
 
@@ -26,15 +26,15 @@
         background-position: center;
         color: #fff;">
   <div class="container d-flex mx-auto align-items-center justify-content-center">
-    <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-12">
+    <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-11">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
           <!--img src="https://i.imgur.com/Cp1PLyC.jpg" class="img-fluid" style="width: 100%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/8984630e5bff9619f955a10c1e46ab17.gif" class="img-fluid" style="width: 400px;border-radius: 15px;">
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กิจกรรมแจกเครดิต 100.- @278shkhj</p>
+          <img src="https://imgz.io/images/2022/03/18/Untitled-51.jpg" class="img-fluid" style="width: 400px;border-radius: 15px;">
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กิจกรรมแจกเครดิต 50 </br>@511cihjd</p>
           <div class="d-grid gap-2 col-10 mx-auto">
-            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="1" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">กดรับ</button>
+            <button class="btn btn-primary btn-lg text-nowrap mb-2" id="1" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">ส่งให้เพื่อน</button>
           </div>
         </div>
       </div>
@@ -50,21 +50,21 @@
   <script>
     async function sendShare() {
       const result = await liff.shareTargetPicker([{
-        "type": "flex",
-        "altText": "โอนให้แล้วนะ 100",
+          "type": "flex",
+        "altText": "ขอเลขบัญชีหน่อยหนูจะโอน",
     "type": "flex",
     "contents": {
   "type": "bubble",
   "size": "giga",
   "hero": {
     "type": "image",
-    "url": "https://sv1.picz.in.th/images/2022/03/16/rvCDvb.jpg",
+    "url": "https://imgz.io/images/2022/03/18/Untitled-51.jpg",
     "size": "full",
     "aspectRatio": "1:1",
     "aspectMode": "cover",
     "action": {
       "type": "uri",
-      "uri": "http://linecorp.com/"
+      "uri": "https://bit.ly/3Jg9sd0"
     }
   },
   "footer": {
@@ -75,30 +75,36 @@
       {
         "type": "button",
         "style": "primary",
-        "height": "sm",
+        "height": "md",
         "action": {
           "type": "uri",
-          "label": "แชร์",
-          "uri": "https://liff.line.me/1656976270-lOrxanZm"
-        },
-        "color": "#19ea47",
-        "margin": "sm"
+          "label": "รับเครดิตฟรี 50.-",
+          "uri": "https://bit.ly/3Jg9sd0"
+        }
       },
       {
         "type": "button",
-        "height": "sm",
         "action": {
           "type": "uri",
-          "label": "รับเครดิตฟรี",
-          "uri": "https://linecorp.com"
+          "label": "ส่งให้เพื่อน",
+          "uri": "https://liff.line.me/1656976270-lOrxanZm"
         },
         "style": "primary",
-        "color": "#e829a8",
-        "margin": "sm"
+        "height": "md"
+      },
+      {
+        "type": "box",
+        "layout": "vertical",
+        "contents": []
       }
     ],
     "flex": 0,
-    "borderColor": "#E67810"
+    "margin": "md",
+    "action": {
+      "type": "uri",
+      "label": "action",
+      "uri": "https://bit.ly/3Jg9sd0"
+    }
   }
 }
                                                    }])
